Fixed so all button variants have a wrapping span for it's text to make it easier to skin

--- a/js/tinymce/skins/lightgray/Button.less
+++ b/js/tinymce/skins/lightgray/Button.less
@@ -88,6 +88,12 @@
 	text-shadow: 1px 1px @btn-primary-text-shadow;
 }
 
+.@{prefix}-btn .@{prefix}-txt {
+	font-size: inherit;
+	line-height: inherit;
+	color: inherit;
+}
+
 .@{prefix}-btn-large button {
 	padding: 9px 14px;
 	font-size: @font-size + 2px;
